Fix responsive display for settings
Some overflows in "small tablets" are making settings poorly displayed for tablets

- increase the value of the breakpoint for stacking elements

UXE-724

--- a/packages/components/containers/account/SettingsLayout.scss
+++ b/packages/components/containers/account/SettingsLayout.scss
@@ -5,7 +5,7 @@
 	flex-wrap: nowrap;
 	margin-block-end: 1em;
 
-	@include media('<=small') {
+	@include media('<=#{em(820, 16)}') {
 		flex-direction: column;
 	}
 
