--- a/applications/account/src/app/signup/AccountStep.scss
+++ b/applications/account/src/app/signup/AccountStep.scss
@@ -14,12 +14,12 @@
 	}
 
 	// Rely on parent frame size through a flag classname
-	.tinymobile & {
+	.xsmall & {
 		padding-inline: em(8);
 	}
 
-	.tinymobile &,
-	.mobile & {
+	.xsmall &,
+	.small & {
 		font-size: max(16px, em($base-font-size));
 	}
 }
