Make folder links properly printed out in Jaws
For some reasons (still unsure), Jaws is not vocalizing properly the folder/label list in side nav.

We suspect Jaws is grumpy with the "more option" button that is inside (NVDA has no problem).

- added `visibility:hidden` to hover helper, so buttons are not printed in link list in Jaws (no impact on other cases) - we'll rework this structure later on.

UXE-804

--- a/packages/styles/scss/utilities/_opacity.scss
+++ b/packages/styles/scss/utilities/_opacity.scss
@@ -56,12 +56,14 @@ $container-name: 'group-hover-opacity-container';
 			position: absolute;
 			transition: none;
 			pointer-events: none;
+			visibility: hidden;
 		}
 
 		@at-root {
 			.#{$container-name}:hover &,
 			.#{$container-name}:hover .mouse\:group-hover\:opacity-100 {
 				opacity: 1;
+				visibility: visible;
 			}
 		}
 
