--- a/packages/pass/components/Layout/Icon/IconBox.scss
+++ b/packages/pass/components/Layout/Icon/IconBox.scss
@@ -1,5 +1,6 @@
 .pass-item-icon {
 	background: var(--interaction-weak);
+	transition: background 0.2s ease-in-out;
 
 	&--has-image {
 		background: white;
