--- a/packages/pass/components/Item/List/ItemsListItem.scss
+++ b/packages/pass/components/Item/List/ItemsListItem.scss
@@ -23,3 +23,7 @@
 .button.is-active.pass-item-list--item {
 	background-color: var(--interaction-norm-minor-1);
 }
+
+.pass-item-list--item--pin {
+	background-color: var(--interaction-norm-major-1);
+}
